--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ email-validator==1.1.1
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
 Flask-Login==0.5.0
+Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.3
 Flask-WTF==0.14.3
 gunicorn==20.0.4
