--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ Pillow==7.1.2
 pycparser==2.20
 python-dateutil==2.8.1
 pytz==2020.1
+secrets==1.0.2
 six==1.15.0
 SQLAlchemy==1.3.17
 Werkzeug==1.0.1
