--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+#
+.idea/
+*.idea/
+.idea
+idea/
+
 # User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
@@ -200,3 +206,7 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# setup.py stuff
+.myproject.egg-info
+myproject.egg-info/
