--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==7.1.2
 DateTime==4.3
 dnspython==1.16.0
 email-validator==1.1.1
+essential-generators==0.9.2
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
 Flask-Login==0.5.0
