--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ dnspython==1.16.0
 email-validator==1.1.1
 essential-generators==0.9.2
 Flask==1.1.2
+Flask-Admin==1.5.6
 Flask-Bcrypt==0.7.1
 Flask-Login==0.5.0
 Flask-Migrate==2.5.3
