--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ cffi==1.14.0
 click==7.1.2
 DateTime==4.3
 dnspython==1.16.0
+elasticsearch==7.8.0
 email-validator==1.1.1
 essential-generators==0.9.2
 Flask==1.1.2
