--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ numpy==1.18.4
 pandas==1.0.4
 Pillow==7.1.2
 pycparser==2.20
+pyOpenSSL==19.1.0
 python-dateutil==2.8.1
 pytz==2020.1
 secrets==1.0.2
